--- a/src/components/Order/order.css
+++ b/src/components/Order/order.css
@@ -24,3 +24,17 @@
     font-size: 20px;
     margin-bottom: 20px;
 }
+
+.delete-icon {
+    float: right;
+    position: relative;
+    top: -25px;
+    color: #ca5252;
+    cursor: pointer;
+    transition: color, transform 0.5s ease;
+}
+
+.delete-icon:hover {
+    color: #dd0d0d;
+    transform: scale(1.5);
+}
